selection style changed from every thing in app.css

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,9 @@
 .first-color{
   color: var(--primary-color) !important;
 }
+
+
+*::selection{
+  background-color: #f4b183;
+  color: rgba(255, 255, 255, 0.679);
+}
